Testing to fix transparent rectangle styling on mobile v2.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,6 +66,7 @@
   right: 0;
   top: 0;
   z-index: 3;
+  display: block;
   animation: slideIn 1s;
   -webkit-animation: slideIn 1s;
   -moz-animation: slideIn 1s;
